# env-cleaner

./: .npmignore  CLAUDE.md  Cargo.toml  Cargo.toml.wasm  build-wasm.sh  env-cleaner-0.1.0.tgz  install.js  package-lock.json  package.json
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: todos.md
src/: lib.rs  main.rs
