[package]
name = "env-cleaner"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "env-cleaner"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.47", features = ["derive"] }
walkdir = "2.5"
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }